fix: align 변경

--- a/assets/styles/lol_champion_detail.css
+++ b/assets/styles/lol_champion_detail.css
@@ -87,6 +87,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 830px;
 }
@@ -95,8 +96,11 @@
   width: 40%;
   flex-direction: column;
   align-items: center;
+  margin-right: 40px;
 }
 .skills_title {
+  display: inline-block;
+  margin-bottom: 50px;
   color: #fff;
   font-style: italic;
   font-weight: 800;
@@ -105,8 +109,14 @@
 }
 .skill_type {
   display: flex;
+  justify-content: space-evenly;
+  width: 100%;
 }
-.skill_type_info {}
+.skill_type_info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .skill_type_img {}
 .skill_type_img img {}
 .skill_type_name {
@@ -131,8 +141,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 30px;
 }
 .skill_name {
+  margin-bottom: 10px;
   color: #fff;
   font-size: 24px;
   line-height: 25px;
@@ -140,6 +152,7 @@
   font-style: italic;
 }
 .skill_sub_name {
+  margin-bottom: 10px;
   color: rgb(153, 153, 153);
   font-size: 16px;
   line-height: 25px;
